force-app/main/default/objects/Project__c/fields/ProductOwner__c.field-meta.xml
<CustomField>
    <fullName>ProductOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>