force-app/main/default/objects/Project__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Project description</description>
    <inlineHelpText>Project description, you may add some background, business value, and some more details in this field.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>