force-app/main/default/objects/Project__c/fields/Project_Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Overall_Status__c</fullName>
    <description>Project Overall Status</description>
    <inlineHelpText>Project Overall Status. Green means status is good, Yellow means there is some issues but it is under control, Red means the status is extremely bad.</inlineHelpText>
    <label>Project Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>