force-app/main/default/objects/Project__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <description>The Phase of the Project.</description>
    <inlineHelpText>The Phase of the Project.</inlineHelpText>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Post Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>