force-app/main/default/objects/Project__c/fields/ScrumMaster__c.field-meta.xml
<CustomField>
    <fullName>ScrumMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Master</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projetos1</relationshipName>
    <type>Lookup</type>
</CustomField>