force-app/main/default/objects/Project__c/fields/Sprint_Duration__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Duration__c</fullName>
    <inlineHelpText>Enter the default standard sprint duration.  This default may be overridden when setting up individual sprints.</inlineHelpText>
    <label>Sprint Duration (Weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>