force-app/main/default/objects/Project__c/fields/TempID__c.field-meta.xml
<CustomField>
    <fullName>TempID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TempID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>