force-app/main/default/objects/Project__c/listViews/Projetos_Ativos.listView-meta.xml
<ListView>
    <fullName>Projetos_Ativos</fullName>
    <columns>NAME</columns>
    <columns>Sprint_Duration__c</columns>
    <columns>ProductOwner__c</columns>
    <columns>ScrumMaster__c</columns>
    <filterScope>Everything</filterScope>
    <label>Projetos Ativos</label>
</ListView>